--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Si todo lo anterior no puede aplicarse, llega el momento de gestionar los residu
 </ol>
 </details>
 <br><audio controls autoplay loop>
-  <source src="C:\Users\andrea\Music\in.mp3" type="audio/mpeg">
+  <source src="in.mp3" type="audio/mpeg">
   Tu navegador no soporta la reproducción de audio.
 </audio></br>
 <a href="file:///C:/Users/andrea/Desktop/p%C3%A1gina%202.html">
