--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Si todo lo anterior no puede aplicarse, llega el momento de gestionar los residu
   <source src="in.mp3" type="audio/mpeg">
   Tu navegador no soporta la reproducción de audio.
 </audio></br>
-<a href="file:///C:/Users/andrea/Desktop/p%C3%A1gina%202.html">
+<a href="página 2.html">
     <button>continuación</button>
   </a> 
 
