--- a/página 2.html
+++ b/página 2.html
@@ -1,6 +1,6 @@
 <html>
 <head> 
-<br><a href="file:///C:/Users/andrea/Desktop/p%C3%A1gina%203.html">
+<br><a href="página 3-copia.html">
     <button>última página</button>
   </a> </br>
 
