--- a/página 2.html
+++ b/página 2.html
@@ -1,8 +1,8 @@
 <html>
 <head> 
-<br><a href="página 3 - copia.html">
+<a href="página 3 - copia.html">
     <button>última página</button>
-    </a></br>
+</a>
 
 <justify>
 <FONT FACE="courier new" SIZE= 6 COLOR="white">
