--- a/página 2.html
+++ b/página 2.html
@@ -28,6 +28,6 @@ Creando una sociedad más sostenible, con un menor impacto ambiental y una mayor
   Tu navegador no soporta la reproducción de audio.
 </audio>
 
-<center><video src="Economía Circular y cuáles son las 7r básicas.mp4" controls autoplay>align="right">
+<center><iframe src="https://youtu.be/pM3hTjA1Ggo?feature=shared" controls autoplay>align="right">
 </body>
 </html>
