--- a/página 2.html
+++ b/página 2.html
@@ -28,6 +28,12 @@ Creando una sociedad más sostenible, con un menor impacto ambiental y una mayor
   Tu navegador no soporta la reproducción de audio.
 </audio>
 
-<center><iframe src="https://youtu.be/pM3hTjA1Ggo?feature=shared" controls autoplay>align="right"></iframe>
+<center>
+
+    <iframe width="560" height="315" src="https://youtu.be/pM3hTjA1Ggo?feature=shared" 
+            title="YouTube video player" frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen>
+    </iframe>
 </body>
 </html>
