--- a/página 2.html
+++ b/página 2.html
@@ -26,14 +26,12 @@ Creando una sociedad más sostenible, con un menor impacto ambiental y una mayor
  <audio controls autoplay loop>
   <source src="pa2.mp3" type="audio/mpeg">
   Tu navegador no soporta la reproducción de audio.
-</audio>
-
-<center>
-
-    <iframe width="560" height="315" src="https://youtu.be/YGMeO5L_LAs?feature=shared" 
-            title="YouTube video player" frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-            allowfullscreen>
-    </iframe>
+ </audiO>
+<div style="text-align: center;">
+<video width="700" height="400" controls>
+  <source src="Qué es la Economía Circular y cuáles son las 7r básicas.mp4" type="video/mp4">
+</video>
+</div>
+    
 </body>
 </html>
